kubernetes/apps/coder/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coder
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
