kubernetes/apps/coder/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: coder
  namespace: coder
spec:
  parentRefs:
    - name: vps-gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - "coder.robin-vidal.com"
  rules:
    - backendRefs:
        - name: coder
          port: 80
